--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@ and open the template in the editor.
     <body>
  
 <a id="top"></a>
-<a id="nav" href="#top">回到<br>顶部</a>
+
 
 <!--<div  style="position:fixed;width:9601px;height:30px;text-align:center;top:0px">-->
 <nav class="navbar navbar-default navbar-default navbar-fixed-top">
   <div class="container-fluid" >
     <div class="navbar-header">
          <a class="navbar-brand" href="http://10.10.1.14/bpmstatus/">BPM status</a>
-        <a href="../wo" class="navbar-brand ">富鈦全製程查看報工信息</a>
+        <a href="#top" class="navbar-brand ">富鈦全製程查看報工信息</a>
       <button aria-expanded="false" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
