--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ and open the template in the editor.
 <nav class="navbar navbar-default navbar-default navbar-fixed-top">
   <div class="container-fluid" >
     <div class="navbar-header">
-         <a class="navbar-brand" href="http://10.10.1.14/bpmstatus/">BPM status</a>
+         <a class="navbar-brand" href="http://10.10.1.14/bpmstatus/">..</a>
         <a href="#top" class="navbar-brand ">富鈦全製程查看報工信息</a>
       <button aria-expanded="false" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
         <span class="sr-only">Toggle navigation</span>
