--- a/index.html
+++ b/index.html
@@ -166,14 +166,14 @@ and open the template in the editor.
            <a id="jump3"><h3> portal页面上对应T100程序中的报工单</h3></a>
              <img src="img/28" alt="*** 28.png NOT FOUND ***"><br><br>
              <a id="jump4"> <h3>portal上应该也显示不良数量</h3></a>
-              <img src="img/29/" alt="*** 29.png NOT FOUND ***"><br><br>
+              <img src="img/29.png" alt="*** 29.png NOT FOUND ***"><br><br>
               
         </div><br>
 
 <div class=" navbar-default  navbar-fixed-bottom"  align="center">
   <div class="navbar-header" >
          <a class="navbar-brand" href="#pda">PDA</a>
-         <a class="navbar-brand" href="#bootswatch">bootswatch</a>
+         <!--<a class="navbar-brand" href="#bootswatch">bootswatch</a>-->
          <a class="navbar-brand" href="#T100">T100</a>
          <a class="navbar-brand" href="#web">页面</a>
     </div>
