--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ and open the template in the editor.
 
 
 <!--<div  style="position:fixed;width:9601px;height:30px;text-align:center;top:0px">-->
-<nav class="navbar navbar-default navbar-default navbar-fixed-top">
+<nav  class="navbar navbar-default navbar-default navbar-fixed-top">
   <div class="container-fluid" >
     <div class="navbar-header">
          <a class="navbar-brand" href="http://10.10.1.14/bpmstatus/">..</a>
@@ -170,14 +170,14 @@ and open the template in the editor.
               
         </div><br>
 
-<div class=" navbar-default  navbar-fixed-bottom"  align="center">
+<!--<div class=" navbar-default  navbar-fixed-bottom"  align="center">
   <div class="navbar-header" >
          <a class="navbar-brand" href="#pda">PDA</a>
-         <!--<a class="navbar-brand" href="#bootswatch">bootswatch</a>-->
+         <a class="navbar-brand" href="#bootswatch">bootswatch</a>
          <a class="navbar-brand" href="#T100">T100</a>
          <a class="navbar-brand" href="#web">页面</a>
     </div>
-</div>
+</div>-->
     </body>
     
 </html>
