--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ and open the template in the editor.
             <li><a href="#jump">借助Total Control工具</a></li>
             <li><a href="#ok">确认启用usb调式</a></li>
             <li><a href="#after">确认完成后可自动监测到设备</a></li>
-            <li><a href="#after">开启后样子</a></li>
+            <!--<li><a href="#after">开启后样子</a></li>-->
            
           </ul>
         </li>
@@ -100,7 +100,30 @@ and open the template in the editor.
   </div>
     
 </nav><br>-->
+<div class="container">
 
+            <div class="page-header" id="banner">
+                <div class="row">
+                    <div class="col-lg-8 col-md-7 col-sm-6">
+                        <h1>報工專區</h1>
+                        <p class="lead">這是演示是專為手機和PDA的畫面開發的網頁，請用手機或PDA訪問</p>
+                    </div>
+<!--                    <div class="col-lg-4 col-md-5 col-sm-6">
+                        <div class="sponsor">
+                            <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=bootswatchcom" id="_carbonads_js"></script>
+                        </div>
+                    </div>-->
+                </div>
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-4">
+                        <div class="list-group table-of-contents">
+                            <a class="list-group-item" href="#pda">PDA畫面</a>
+                            <a class="list-group-item" href="#web">網頁查報工</a>
+                            <a class="list-group-item" href="#T100">T100查報工</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
@@ -139,7 +162,7 @@ and open the template in the editor.
            <img src="img/16" alt="*** 16.png NOT FOUND ***"><br><br>
            <a id="bootswatch"></a><br>
            <h1>bootswatch</h1><hr>
-           <a id="css"><h3> 10.应做成bootswath那种的样式</h3></a>s
+           <a id="css"><h3> 10.应做成bootswath那种的样式</h3></a>
            <img src="img/17" alt="*** 17.png NOT FOUND ***"><br><br>
            <img src="img/18" alt="*** 18.png NOT FOUND ***"><br><br>
            <a id="dropdown"> <h3>下拉选项</h3></a>
