--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ and open the template in the editor.
                         </div>
                     </div>-->
                 </div>
-                <div class="row">
+                <div class="row" align="center">
                     <div class="col-lg-3 col-md-3 col-sm-4">
                         <div class="list-group table-of-contents">
                             <a class="list-group-item" href="#pda">PDA畫面</a>
